# ai-engineering-buildcamp-cohort3

./: rag.py
assignment1/: homework.md  pyproject.toml  requirements.txt
assignment2/: agent.py  pyproject.toml
assignment3/: .gitignore  conftest.py  judge.py  patch_agent.py  pyproject.toml  sql_agent.py  sql_tools.py  test_agent.py  utils.py
