[project]
name = "week1-assignment"
version = "0.1.0"
description = "AI Engineering Buildcamp — Week 1 polished submission"
requires-python = ">=3.11"
dependencies = [
    "fire",
    "gitsource",
    "markitdown[pdf]",
    "minsearch",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[tool.uv]
package = false
