[project]
name = "assignment3"
version = "0.1.0"
description = "AI Engineering Buildcamp assignment 3"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.3",
    "pydantic-ai>=1.88.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
